--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --display-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
@@ -11,8 +11,12 @@
   },
   "devDependencies": {
     "axios": "^0.17",
+    "core-js": "^2.6.4",
     "cross-env": "^5.1",
-    "laravel-mix": "^1.4",
-    "vue": "^2.5.3"
+    "font-awesome": "^4.7.0",
+    "laravel-mix": "^4.0.14",
+    "open-sans-all": "^0.1.3",
+    "vue": "^2.5.3",
+    "vue-template-compiler": "^2.6.3"
   }
 }
